add before.md && after.md

--- a/myCode/index.html
+++ b/myCode/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<div class="container">
-
+		<button onclick="beforeFunc()">before</button>
+		<button onclick="afterFunc()">after</button>
 	</div>
 	<script type="text/javascript" src="js/myCode.js"></script>
 </body>
